--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <script src="./app/main.js"></script>
 <script src="./app/GameBoard/GameBoardCtrl.js"></script>
 <script src="./app/HostBoard/HostBoardCtrl.js"></script>
+<script src="http://localhost:35729/livereload.js"></script>
 <link rel=stylesheet href="./css/app.css">
 
 <div ng-view></div>
