CSS game board layout complete

--- a/app/GameBoard/GameBoard.html
+++ b/app/GameBoard/GameBoard.html
@@ -6,6 +6,11 @@
 		<div class="score score-top">{{progress.scoreTop}}</div>	
 		<div class="score score-side score-right">{{progress.scoreRight}}</div>
 	</div>
+	
+	<div class="teams">
+		<div class="team team-a">{{progress.teamLeft}}</div>
+		<div class="team team-b">{{progress.teamRight}}</div>
+	</div>
 
 	<div class="redxs redxs-left">
 		<div class="redx" ng-class="{'redx-on':progress.redxLeft0}">X</div>
