--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang=en ng-app=feud>
 <meta charset=utf-8>
 <title>AngularFire Feud</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.4/angular.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0-beta.13/angular-route.js"></script>
